<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <Toolbar
        android:id="@+id/sing_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/myToolbarTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:padding="5dp"
            android:src="@drawable/logo"
            android:background="@drawable/borders"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_name"
            android:hint="@string/name"
            android:inputType="text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_username"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/hint_username"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_pass"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/hint_password"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_repass"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/re_password"
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_phone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/phone"
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_rig_address"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:hint="@string/address"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</LinearLayout>
