<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_bg">
    <Toolbar
        android:id="@+id/sing_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/myToolbarTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:fontFamily="casual"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="115dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:padding="10dp"
            android:src="@drawable/logo"
            android:background="@drawable/borders"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:fontFamily="casual"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/text"
                android:textColor="@color/color13"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <Button
            android:id="@+id/attendance_btn"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/attendance"
            android:textColor="@color/colorAccent"
            android:background="@drawable/borders"
            android:drawableRight="@drawable/fingerprint2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
        <Button
            android:id="@+id/deperture_btn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/departure"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/borders"
            android:textColor="@color/colorAccent"
            android:drawableRight="@drawable/fingerprint2" />
        </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:background="@color/color13">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:background="@drawable/layout_bg">
            <ImageButton
                android:id="@+id/_1_btn"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:text="My Account"
                android:scaleType="fitCenter"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="7dp"
                android:src="@drawable/user" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="My Account"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_bg">
            <ImageButton
                android:id="@+id/_2_btn"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:src="@drawable/archive" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Archive"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_bg">
            <ImageButton
                android:id="@+id/_3_btn"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                android:paddingRight="7dp"
                android:src="@drawable/alarm" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Notifications"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>